tests/sksl/errors/golden/RedeclareStructTypeWithName.glsl
### Compilation failed:

error: 3: symbol 'foo' was already defined
1 error
